# YAPL

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  build.sh  cmake_install.cmake  lex.yy.c  lex.yy.cc  lexer.l  parser.tab.c  parser.tab.cpp  parser.tab.hpp  parser.y  parser.ypp  test.yapl  utils.c  utils.h  utils.hpp  y.tab.c  y.tab.h  yapl
gui/: app.py  readme.txt  test.yapl  yapl
gui/log/: errors.txt  optimized_quadruples.txt  quadruples.txt  symbol_table.txt
gui/testcases/: test1.yapl  test2.yapl  test3.yapl  test4.yapl  test5.yapl
include/: branching.hpp  common.hpp  controllers.hpp  enums.hpp  errorHandler.hpp  expression.hpp  functions.hpp  loop.hpp  organizer.hpp  parser.tab.hpp  program.hpp  returnNode.hpp  scoping.hpp  var-op.hpp
lex-yacc/: lexer.l  parser.ypp
lib/: If.hpp  assignment.hpp  for.hpp  identifier.hpp  node.hpp  parser.tab.hpp  program.hpp  utils.cpp  utils.hpp  while.hpp
log/: errors.txt  line.txt  optimized_quadruples.txt  quadruples.txt  symbol_table.txt
phase2_testcases/: character_operations.yapl  float_operations.yapl  if.yapl  if_switch,yapl  integer_operations.yapl  loops.yapl  switch.yapl  type_conversion.yapl
src/: branching.cpp  common.cpp  controllers.cpp  expression.cpp  functions.cpp  lex.yy.cc  loop.cpp  parser.tab.cpp
testcases/: 1.yapl  character_operations.yapl  constant.yapl  failed.yapl#  fibonacchi.yapl  float.yapl  function.yapl  function_nested_if_return.yapl  int.yapl  last.yapl  loops.yapl  program.yapl  scopes.yapl  string.yapl  switch.yapl  type_conversion.yapl
